--- a/index.html
+++ b/index.html
@@ -1,11 +1,462 @@
-<script>
-  /* ===================== 게임 로직 + 구글 시트 랭킹 ===================== */
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <title>계란 박스 – 합이 10이 되면 사라지는 게임</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    * { box-sizing: border-box; }
 
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      min-height: 100vh;
+      background: #e5ffe7;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+    }
+
+    .layout {
+      display: flex;
+      gap: 24px;
+      align-items: flex-start;
+      max-width: 1240px;
+      width: 100%;
+      justify-content: center;
+    }
+
+    @media (max-width: 900px) {
+      .layout {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+
+    .frame {
+      width: 900px;
+      max-width: 100%;
+      background: #22c55e;
+      border-radius: 30px;
+      padding: 18px;
+      box-shadow: 0 15px 30px rgba(0,0,0,0.25);
+    }
+
+    .inner {
+      background-image: repeating-linear-gradient(
+        45deg,
+        #f1ffe8 0,
+        #f1ffe8 12px,
+        #e9fbdc 12px,
+        #e9fbdc 24px
+      );
+      border-radius: 20px;
+      padding: 24px 28px 20px;
+      position: relative;
+      min-height: 520px;
+      overflow: hidden;
+    }
+
+    .hidden { display: none !important; }
+
+    /* ===== 메뉴 화면 ===== */
+
+    .menu-layout {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .title-wrap {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 16px;
+    }
+
+    .main-sub {
+      font-size: 18px;
+      font-weight: 700;
+      color: #16a34a;
+      text-shadow: 1px 1px 0 #fff;
+    }
+
+    .main-title {
+      font-size: 32px;
+      font-weight: 900;
+      color: #f97316;
+      text-shadow: 2px 2px 0 #fff, 0 0 4px rgba(0,0,0,0.2);
+    }
+
+    .big-orange-btn {
+      width: 220px;
+      height: 220px;
+      border-radius: 50%;
+      border: none;
+      cursor: pointer;
+      background: radial-gradient(circle at 30% 20%, #fff7ed 0%, #fed7aa 25%, #f97316 70%, #ea580c 100%);
+      box-shadow: 0 10px 18px rgba(0,0,0,0.25);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: 0.15s;
+    }
+    .big-orange-btn:hover { transform: translateY(-3px); }
+    .big-orange-btn span {
+      font-size: 32px;
+      font-weight: 900;
+      color: white;
+      text-shadow: 0 3px 4px rgba(0,0,0,0.4);
+    }
+
+    .menu-right {
+      display:flex;
+      flex-direction:column;
+      gap:16px;
+      align-items:flex-start;
+    }
+
+    .menu-numbers {
+      display: grid;
+      grid-template-columns: repeat(3, 70px);
+      grid-auto-rows: 70px;
+      gap: 12px;
+    }
+
+    .menu-small-orange {
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      background: radial-gradient(circle at 30% 20%, #fff7ed 0%, #fed7aa 25%, #f97316 70%, #ea580c 100%);
+      box-shadow: 0 6px 10px rgba(0,0,0,0.22);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 22px;
+      font-weight: 900;
+      color: #7c2d12;
+    }
+
+    .bottom-bar {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 16px;
+      font-size: 13px;
+      align-items:flex-end;
+      gap:16px;
+    }
+
+    .bottom-left button {
+      background: #16a34a;
+      color: white;
+      border-radius: 20px;
+      border: none;
+      padding: 6px 14px;
+      cursor: pointer;
+    }
+
+    /* 하이스코어 박스 */
+    .highscore-box {
+      background:#ecfdf5;
+      border-radius:14px;
+      padding:10px 12px;
+      border:1px solid #bbf7d0;
+      font-size:12px;
+      color:#166534;
+      flex:1;
+      text-align:left;
+    }
+    .highscore-title {
+      font-weight:700;
+      margin-bottom:4px;
+      display:flex;
+      align-items:center;
+      gap:4px;
+    }
+    #highScoreList {
+      margin:0;
+      padding-left:18px;
+    }
+    #highScoreList li { margin:2px 0; }
+
+    /* ===== 게임 화면 ===== */
+
+    .game-header {
+      display: flex;
+      justify-content: space-between;
+      font-size: 14px;
+      margin-bottom: 8px;
+      color: #065f46;
+    }
+
+    .timer-box {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
+
+    .timer-bar-bg {
+      width: 180px;
+      height: 10px;
+      background: #dcfce7;
+      border-radius: 999px;
+    }
+    .timer-bar-fill {
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg,#22c55e,#facc15);
+      transform-origin: left;
+    }
+
+    #gameBoard {
+      width: 100%;
+      max-width: 720px;
+      height: 360px;
+      margin: 6px auto;
+      background: white;
+      border-radius: 16px;
+      padding: 6px;
+      display: grid;
+      grid-template-columns: repeat(17, 1fr);
+      grid-template-rows: repeat(10, 1fr);
+      gap: 2px;
+      position: relative;
+      user-select: none;
+    }
+
+    .cell {
+      background: #ffe2bf;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 700;
+    }
+    .cell.empty {
+      background: #f4f4f4;
+      color: transparent;
+    }
+    .cell.selected {
+      background: #fed7aa;
+    }
+
+    .orange {
+      width: 85%;
+      height: 85%;
+      border-radius: 50%;
+      background: radial-gradient(circle at 30% 20%, #fff7ed 0%, #fed7aa 25%, #f97316 70%, #ea580c 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .orange-number {
+      font-size: 13px;
+      font-weight: 800;
+      color: #7c2d12;
+    }
+
+    #selectionRect {
+      position: absolute;
+      border: 2px dashed #fb923c;
+      background: rgba(254,215,170,0.25);
+      display: none;
+      pointer-events: none;
+      z-index: 10;
+    }
+
+    #gameBoard.valid #selectionRect {
+      border-color: #22c55e;
+      background: rgba(187,247,208,0.35);
+    }
+    #gameBoard.over10 #selectionRect {
+      border-color: red;
+      background: rgba(254,202,202,0.4);
+    }
+
+    .game-footer {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 8px;
+      font-size: 13px;
+    }
+
+    .btn {
+      background: #22c55e;
+      color: white;
+      border-radius: 20px;
+      padding: 6px 14px;
+      border: none;
+      cursor: pointer;
+    }
+
+    .coupang-wrap {
+      width: 320px;
+      text-align:center;
+    }
+
+    .coupang-notice {
+      font-size:12px;
+      color:#666;
+      line-height:1.4;
+    }
+
+    .end-overlay {
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.4);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .end-card {
+      background: #fefce8;
+      padding: 20px;
+      border-radius: 18px;
+      text-align: center;
+      width: 260px;
+      box-shadow:0 8px 16px rgba(0,0,0,0.25);
+    }
+
+    .highscore-form-title {
+      margin-top:10px;
+      font-size:13px;
+      font-weight:600;
+      color:#16a34a;
+    }
+
+    .highscore-input {
+      margin-top:6px;
+      width:100%;
+      padding:6px 8px;
+      border-radius:10px;
+      border:1px solid #ddd;
+      font-size:13px;
+      box-sizing:border-box;
+    }
+  </style>
+</head>
+<body>
+
+<div class="layout">
+
+  <div class="frame">
+    <div class="inner">
+
+      <!-- ===== 메뉴 화면 ===== -->
+      <div id="menuScreen">
+        <div class="menu-layout">
+          <div class="title-wrap">
+            <div class="main-sub">성포 본척척</div>
+            <div class="main-title">계란 박스</div>
+
+            <button id="playBtn" class="big-orange-btn">
+              <span>Play</span>
+            </button>
+          </div>
+
+          <div class="menu-right">
+            <div class="menu-numbers">
+              <div class="menu-small-orange">5</div>
+              <div class="menu-small-orange">7</div>
+              <div class="menu-small-orange">6</div>
+              <div class="menu-small-orange">8</div>
+              <div class="menu-small-orange">3</div>
+              <div class="menu-small-orange">2</div>
+              <div class="menu-small-orange">9</div>
+              <div class="menu-small-orange">1</div>
+              <div class="menu-small-orange">4</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="bottom-bar">
+          <div class="bottom-left">
+            <button id="menuResetBtn">Reset</button>
+          </div>
+
+          <div class="highscore-box">
+            <div class="highscore-title">
+              <span>🏆</span><span>최고 기록 TOP 5</span>
+            </div>
+            <ol id="highScoreList"></ol>
+          </div>
+        </div>
+      </div>
+
+      <!-- ===== 게임 화면 ===== -->
+      <div id="gameScreen" class="hidden">
+
+        <div class="game-header">
+          <div class="timer-box">
+            <span>남은 시간: <span id="timeLabel">120.0초</span></span>
+            <div class="timer-bar-bg">
+              <div class="timer-bar-fill" id="timeBar"></div>
+            </div>
+          </div>
+
+          <div class="score-box">
+            점수: <span id="scoreLabel">0</span>점 <br>
+            선택 합: <span id="sumLabel">0</span>
+          </div>
+        </div>
+
+        <div id="gameBoard">
+          <div id="selectionRect"></div>
+        </div>
+
+        <div class="game-footer">
+          <div>
+            <button class="btn" id="resetGameBtn">다시 시작</button>
+            <button class="btn" id="backMenuBtn">메뉴로</button>
+          </div>
+          <div>드래그해서 합이 10 되면 사라짐!</div>
+        </div>
+
+        <div id="endOverlay" class="end-overlay hidden">
+          <div class="end-card">
+            <h2>시간 종료!</h2>
+            <div id="finalScoreText" style="font-size:26px;font-weight:800;color:#f97316;">0점</div>
+            <p style="margin:6px 0 4px;">다시 도전해보세요!</p>
+
+            <div id="highScoreForm" class="hidden">
+              <div class="highscore-form-title">새로운 최고 기록입니다! 이름을 남겨보세요 🏆</div>
+              <input id="highScoreNameInput" class="highscore-input" type="text" maxlength="8" placeholder="이름 (최대 8글자)">
+              <button class="btn" id="saveHighScoreBtn" style="width:100%;margin-top:6px;">저장</button>
+            </div>
+
+            <div style="margin-top:10px;display:flex;gap:8px;justify-content:center;">
+              <button class="btn" id="retryBtn">다시 플레이</button>
+              <button class="btn" id="endMenuBtn" style="background:#ccc;color:#111;">메뉴로</button>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+  <div class="coupang-wrap">
+    <!-- 필요하면 쿠팡 스크립트 다시 넣기 -->
+  </div>
+
+</div>
+
+<div style="width:100%;max-width:1240px;margin:24px auto 0;text-align:center;font-size:12px;color:#666;">
+  ※ 이 게임은 쿠팡 파트너스 활동의 일환으로 이에 따른 일정액의 수수료를 제공받습니다.
+</div>
+
+<script>
   const ROWS = 10;
   const COLS = 17;
   const TOTAL_TIME_MS = 120000;
 
-  // ★ 여기를 자신의 Apps Script 웹앱 URL로 변경 ★
+  // ★ 본인 Apps Script 웹앱 URL
   const API_URL = "https://script.google.com/macros/s/AKfycbxUYwBX5y52suUKjl4Sk3YpA1Nopko5lMo-HQZkCgUSmh1uQ4g655J55WQUG6JW4xX7/exec";
 
   let board = [];
@@ -22,7 +473,6 @@
   let timeRemaining = TOTAL_TIME_MS;
   let timerInterval = null;
 
-  // 서버에서 받아온 하이스코어 리스트
   let highScores = []; // {name, score, timestamp}
 
   const menuScreen = document.getElementById("menuScreen");
@@ -52,8 +502,6 @@
   const highScoreNameInputEl = document.getElementById("highScoreNameInput");
   const saveHighScoreBtn = document.getElementById("saveHighScoreBtn");
 
-  /* ---------- 화면 전환 ---------- */
-
   function showMenu() {
     menuScreen.classList.remove("hidden");
     gameScreen.classList.add("hidden");
@@ -75,8 +523,6 @@
     endOverlay.classList.add("hidden");
     hideHighScoreForm();
   }
-
-  /* ---------- 보드 ---------- */
 
   function initBoard() {
     board = [];
@@ -127,8 +573,6 @@
     sumLabel.textContent = currentSum;
   }
 
-  /* ---------- 타이머 ---------- */
-
   function startTimer() {
     if (timerInterval) clearInterval(timerInterval);
 
@@ -156,8 +600,6 @@
     timeBar.style.transform = `scaleX(${timeRemaining / TOTAL_TIME_MS})`;
   }
 
-  /* ---------- 게임 시작/종료 ---------- */
-
   function startGame() {
     hideEndOverlay();
     stopTimer();
@@ -180,7 +622,6 @@
     stopTimer();
     finalScoreText.textContent = score + "점";
 
-    // 서버 랭킹 기준으로 새 기록인지 체크
     if (isNewHighScore(score)) {
       showHighScoreForm();
     } else {
@@ -189,8 +630,6 @@
 
     showEndOverlay();
   }
-
-  /* ---------- 드래그 선택 ---------- */
 
   function getCellFromEvent(e) {
     const t = e.target.closest(".cell");
@@ -315,9 +754,6 @@
     renderBoard();
   }
 
-  /* ---------- 구글 시트 랭킹 연동 ---------- */
-
-  // 서버에서 랭킹 가져오기
   async function fetchHighScores() {
     try {
       const res = await fetch(API_URL);
@@ -344,7 +780,6 @@
       return;
     }
 
-    // TOP 5만 메뉴에 보여주기
     highScores.slice(0, 5).forEach((rec) => {
       const li = document.createElement("li");
       const name = rec.name || "무명";
@@ -385,11 +820,9 @@
       console.error("saveCurrentScore error", e);
     }
 
-    await fetchHighScores(); // 다시 받아와서 화면 갱신
+    await fetchHighScores();
     hideHighScoreForm();
   }
-
-  /* ---------- 이벤트 바인딩 ---------- */
 
   playBtn.onclick = () => {
     showGame();
@@ -416,9 +849,11 @@
   gameBoardEl.addEventListener("pointermove", onPointerMove);
   window.addEventListener("pointerup", onPointerUp);
 
-  // 초기 로딩
   window.addEventListener("load", () => {
-    fetchHighScores(); // 서버에서 랭킹 불러오기
+    fetchHighScores();
     showMenu();
   });
 </script>
+
+</body>
+</html>
